--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/d3": "^6.7.0",
     "@types/event-stream": "^3.3.34",
     "@types/express": "^4.17.12",
+    "@types/fs-extra": "^9.0.11",
     "@types/glob": "^7.1.3",
     "@types/got": "^9.6.11",
     "@types/gulp": "^4.0.8",
@@ -119,6 +120,7 @@
     "eslint": "^7.28.0",
     "eslint-plugin-import": "^2.23.4",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "glob": "^7.1.7",
     "got": "^11.8.2",
     "gulp": "^4.0.2",
