--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,19 +5,22 @@ jobs:
 #      - image: circleci/node:14
     machine:
       image: ubuntu-2004:202010-01
+    environment:
+      TZ: Europe/Berlin
+
     working_directory: ~/app
 
     steps:
+      - run:
+          name: Update env
+          command: |
+            sudo sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
       - run:
           name: NVM
           command: |
             nvm install 14 && nvm use 14 && nvm alias default 14
             node -v
             npm -v
-
-#            echo '[ -s "$HOME/.bashrc" ] && \. "$HOME/.bashrc"' >> $HOME/.bash_profile
-#            echo 'export NVM_DIR=$HOME/.nvm' >> $BASH_ENV
-#            echo 'source $NVM_DIR/nvm.sh' >> $BASH_ENV
 
       - checkout
 
@@ -29,24 +32,18 @@ jobs:
           name: Install npm wee
           command: npm install
 
-#      - setup_remote_docker
-#      - run:
-#          name: Install Docker Compose
-#          command: |
-#            set -x
-#            curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-#            chmod +x ~/docker-compose
-#            sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
           name: Start container
           command: |
             set -x
             docker-compose -f docker/testing/docker-compose.yml up -d
+
       - run:
           name: Wait for containers to start
           command: |
             set -x
             sleep 60
+
       - run:
           name: Test
           command: npm test
