--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -7,7 +7,7 @@
     "./index.js": "./browser.js"
   },
   "scripts": {
-    "test": "mocha test/{**,**/**}/*.spec.ts"
+    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts"
   },
   "bin": {
     "typexs": "./bin/typexs",
