--- a/packages/roles/package.json
+++ b/packages/roles/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "browser": "browser.js",
   "scripts": {
-    "test": "mocha test/{**,**/**}/*.spec.ts"
+    "test": "nyc mocha test/{**,**/**}/*.spec.ts"
   },
   "repository": {
     "type": "git",
