--- a/packages/server/.nycrc.json
+++ b/packages/server/.nycrc.json
@@ -15,7 +15,7 @@
   "reporter": [
     "json"
   ],
-  "report-dir": "../../coverage/schema",
+  "report-dir": "../../coverage/server",
   "sourceMap": true,
   "instrument": true,
   "cache": false
