--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,7 @@
     "doc": "docs/de"
   },
   "scripts": {
-    "test": "mocha test/{**,**/**}/*.spec.ts"
+    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts"
   },
   "repository": {
     "type": "git",
