--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "del": "^6.0.0",
     "eslint": "^7.28.0",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.7",
