--- a/packages/base/.nycrc.json
+++ b/packages/base/.nycrc.json
@@ -15,6 +15,7 @@
   "reporter": [
     "json"
   ],
+  "temp-dir": "../../.nyc-output/base",
   "report-dir": "../../coverage/base",
   "sourceMap": true,
   "instrument": true,
