--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -7,7 +7,8 @@
     "./index.js": "./browser.js"
   },
   "scripts": {
-    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts"
+    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json"
   },
   "bin": {
     "typexs": "./bin/typexs",
