--- a/packages/roles/package.json
+++ b/packages/roles/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "browser": "browser.js",
   "scripts": {
-    "test": "nyc mocha test/{**,**/**}/*.spec.ts"
+    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",    
+    "posttest": "nyc report --reporter=json"
   },
   "repository": {
     "type": "git",
