--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -10,7 +10,8 @@
     "doc": "docs/de"
   },
   "scripts": {
-    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts"
+    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",    
+    "posttest": "nyc report --reporter=json"
   },
   "repository": {
     "type": "git",
