--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,8 @@
     "doc": "docs/de"
   },
   "scripts": {
-    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts"
+    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json"
   },
   "repository": {
     "type": "git",
