--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@angular/platform-browser": "12.0.3",
     "@angular/platform-browser-dynamic": "12.0.3",
     "@angular/router": "12.0.3",
+    "@antora/site-generator-default": "^2.3.4",
     "@cezaryrk/minimatch": "3.0.4",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@popperjs/core": "^2.9.2",
@@ -138,6 +139,7 @@
     "gulp": "^4.0.2",
     "gulp-bump": "^3.2.0",
     "gulp-clean": "^0.4.0",
+    "gulp-connect": "^5.7.0",
     "gulp-mocha": "^8.0.0",
     "gulp-replace": "^1.1.3",
     "gulp-shell": "^0.8.0",
