--- a/deployments/testing/docker-compose.yml
+++ b/deployments/testing/docker-compose.yml
@@ -42,6 +42,7 @@ services:
     image: mysql:5
     ports:
       - 127.0.0.1:3306:3306
+    command: --sql_mode="ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
     environment:
       MYSQL_DATABASE: txsbase
       MYSQL_USER: txsbase
