--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -23,12 +23,12 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@allgemein/base": "~1.5.6",
-    "@allgemein/config": "~1.1.3",
-    "@allgemein/expressions": "~1.1.0",
-    "@allgemein/mango-expressions": "~1.1.1",
-    "@allgemein/moduls": "~1.6.5",
-    "@allgemein/schema-api": "~1.5.0",
+    "@allgemein/base": "^1.6.1",
+    "@allgemein/config": "^1.1.3",
+    "@allgemein/expressions": "^1.1.0",
+    "@allgemein/mango-expressions": "^1.1.1",
+    "@allgemein/moduls": "^1.6.5",
+    "@allgemein/schema-api": "^1.5.1",
     "@cezaryrk/minimatch": "3.0.4",
     "commons-eventbus": "^0.12.2",
     "luxon": "^1.27.0",
