--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -25,13 +25,13 @@
   "dependencies": {
     "@allgemein/base": "^1.6.2",
     "@allgemein/config": "^1.1.3",
+    "@allgemein/eventbus": "^0.14.1",
     "@allgemein/expressions": "^1.1.0",
     "@allgemein/mango-expressions": "^1.1.1",
     "@allgemein/moduls": "^1.6.5",
     "@allgemein/schema-api": "^1.5.1",
     "@cezaryrk/minimatch": "3.0.4",
     "ajv": "^8.5.0",
-    "commons-eventbus": "^0.12.2",
     "fast-safe-stringify": "2.1.1",
     "js-yaml": "~4.1.0",
     "luxon": "^1.27.0",
