--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@allgemein/http": "^1.2.0",
     "@allgemein/packaging": "^1.2.13",
+    "@allgemein/schema-api": "^1.5.1",
     "@angular-devkit/build-angular": "12.0.3",
     "@angular-devkit/core": "12.0.3",
     "@angular-devkit/schematics": "12.0.3",
