--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-PLACEHOLDER",
   "description": "",
   "main": "index.js",
+  "browser": "browser.js",
   "scripts": {
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json"
