--- a/config/typexs--server.yml
+++ b/config/typexs--server.yml
@@ -1,7 +1,11 @@
-
+storage:
+  default:
+    database: 'tmp/db_${app.name}_worker.db'
 
 tasks:
   logdir: ./tmp/tasklog
+  logger: 'winston'
+  logging: 'file'
   access:
     - task: '*'
       access: allow
