--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "npx gulp test",
     "posttest": "npx codecov -f coverage/**/*.json",
     "ng": "npx ng",
-    "start": "npx concurrently \"npx ng serve\" \"npx typexs server --nodeId server\"",
-    "build": "npx ng build --prod",
+    "start": "npx concurrently \"cd packages/app && npx ng serve\" \"npx typexs server --nodeId server\"",
+    "build": "cd packages/app && npx ng build --prod",
     "lint": "npx ng lint",
     "mocha": "npx mocha test/{**,**/**}/*.spec.ts",
     "karma": "npx ng test typexs --code-coverage=true --watch=false"
@@ -49,16 +49,16 @@
     "@typexs/roles": "file:./packages/roles/src",
     "@typexs/roles-api": "file:./packages/roles-api/src",
     "@typexs/schema": "file:./packages/schema/src",
-    "@typexs/server": "file:./packages/server/src",
     "@typexs/search": "file:./packages/search/src",
     "@typexs/search-ng": "file:./packages/search-ng/src",
+    "@typexs/server": "file:./packages/server/src",
     "@typexs/storage-ng": "file:./packages/storage-ng/src",
     "@typexs/tasks-ng": "file:./packages/tasks-ng/src"
   },
   "devDependencies": {
     "@allgemein/http": "^1.2.0",
-    "@allgemein/packaging": "^1.2.13",
-    "@allgemein/schema-api": "^1.5.1",
+    "@allgemein/packaging": "^1.2.14",
+    "@allgemein/schema-api": "^1.5.2",
     "@angular-devkit/build-angular": "12.0.3",
     "@angular-devkit/core": "12.0.3",
     "@angular-devkit/schematics": "12.0.3",
@@ -104,6 +104,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.12.2",
     "@types/redis": "^2.8.29",
+    "@types/sha1": "^1.1.3",
     "@types/supertest": "^2.0.11",
     "@types/through2": "^2.0.36",
     "@types/triple-beam": "^1.3.2",
@@ -162,6 +163,7 @@
     "nyc": "^15.1.0",
     "perfect-scrollbar": "^1.5.1",
     "pg": "^8.6.0",
+    "pg-native": "^3.0.0",
     "prismjs": "^1.23.0",
     "redis": "^3.1.2",
     "routing-controllers": "^0.9.0",
