--- a/package.json
+++ b/package.json
@@ -165,7 +165,6 @@
     "pg": "^8.6.0",
     "prismjs": "^1.23.0",
     "redis": "^3.1.2",
-    "routing-controllers": "^0.9.0",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.6.7",
     "sinon": "^11.1.1",
@@ -177,8 +176,8 @@
     "through": "^2.3.8",
     "ts-node": "^10.0.0",
     "tslib": "^2.3.0",
-    "typedi": "0.8.0",
     "typescript": "4.2.4",
+    "typeorm": "0.2.34",
     "winston": "^3.3.3",
     "yargonaut": "~1.1.4",
     "yargs": "^17.0.1",
