--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "noImplicitAny": true,
     "skipLibCheck": true,
     "suppressImplicitAnyIndexErrors": true,
+    "resolveJsonModule": false,
     "typeRoots": [
       "./node_modules/@types"
     ],
