--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
   "env": {
     "browser": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "jasmine": true,
+    "mocha": true
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -16,7 +18,9 @@
   "plugins": [
     "eslint-plugin-import",
     "@angular-eslint/eslint-plugin",
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "jasmine",
+    "mocha"
   ],
   "rules": {
     "@angular-eslint/component-class-suffix": "error",
