--- a/package.json
+++ b/package.json
@@ -129,6 +129,8 @@
     "del": "^6.0.0",
     "eslint": "^7.28.0",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jasmine": "^4.1.2",
+    "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-prettier": "^3.4.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
@@ -143,6 +145,7 @@
     "gulp-shell": "^0.8.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
+    "i": "^0.3.7",
     "jasmine": "^3.7.0",
     "jquery": "^3.6.0",
     "js-yaml": "^4.1.0",
@@ -160,6 +163,7 @@
     "mysql": "^2.18.1",
     "ng-packagr": "12.0.3",
     "node-machine-id": "~1.1.12",
+    "npm": "^8.1.3",
     "nyc": "^15.1.0",
     "perfect-scrollbar": "^1.5.1",
     "pg": "^8.6.0",
@@ -176,8 +180,8 @@
     "through": "^2.3.8",
     "ts-node": "^10.0.0",
     "tslib": "^2.3.0",
-    "typescript": "4.2.4",
     "typeorm": "0.2.34",
+    "typescript": "4.2.4",
     "winston": "^3.3.3",
     "yargonaut": "~1.1.4",
     "yargs": "^17.0.1",
