fix: update search

--- a/deployments/develop/docker-compose.yml
+++ b/deployments/develop/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - discovery.type=single-node
       - node.name=es01
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+    volumes:
+      - ./config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
     ports:
       - 127.0.0.1:9200:9200
       - 127.0.0.1:9300:9300
