fix: entity view page + elastic output

--- a/config/typexs--server.yml
+++ b/config/typexs--server.yml
@@ -1,6 +1,6 @@
 storage:
   default:
-    database: 'tmp/db_${app.name}_worker.db'
+    database: '/tmp/db_${app.name}_server.db'
 
 tasks:
   logdir: ./tmp/tasklog
