--- a/config/typexs--worker.yml
+++ b/config/typexs--worker.yml
@@ -9,7 +9,7 @@ eventbus:
 
 storage:
   default:
-    database: 'tmp/db_${app.name}_worker.db'
+    database: '/tmp/db_${app.name}_worker.db'
 
 tasks:
   logdir: /tmp/tasklog
