--- a/demo/testtask/package.json
+++ b/demo/testtask/package.json
@@ -2,7 +2,9 @@
   "name": "testtask",
   "version": "1.0.0",
   "dependencies": {
-    
+    "@typexs/base": "0.0.0-PLACEHOLDER",
+    "@typexs/schema": "0.0.0-PLACEHOLDER",
+    "@typexs/search": "0.0.0-PLACEHOLDER"
   },
   "typexs": {
     "name": "testtask"
