--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "homepage": "https://github.com/typexs/typexs#readme",
   "dependencies": {
     "testtask": "file:./demo/testtask",
+    "@typexs/auth": "file:./packages/auth/src",
+    "@typexs/auth-ng": "file:./packages/auth-ng/src",
     "@typexs/base": "file:./packages/base/src",
     "@typexs/base-ng": "file:./packages/base-ng/src",
     "@typexs/distributed-storage-ng": "file:./packages/distributed-storage-ng/src",
@@ -158,6 +160,7 @@
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.6.0",
+    "ldapjs": "^2.3.1",
     "light-server": "^2.9.1",
     "lodash": "^4.17.21",
     "merge-stream": "^2.0.0",
