--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -2,8 +2,8 @@
   "name": "@typexs/base",
   "version": "0.0.0-PLACEHOLDER",
   "description": "",
-  "main": "./index.ts",
-  "browser": "./browser.ts",
+  "main": "index.js",
+  "browser": "browser.js",
   "scripts": {
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json"
