build: update packages

--- a/demo/testtask/package.json
+++ b/demo/testtask/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@typexs/base": "0.0.0-PLACEHOLDER",
-    "@typexs/schema": "0.0.0-PLACEHOLDER",
+    "@typexs/entity": "0.0.0-PLACEHOLDER",
     "@typexs/search": "0.0.0-PLACEHOLDER"
   },
   "typexs": {
