--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
   },
   "homepage": "https://github.com/typexs/typexs#readme",
   "dependencies": {
-    "testtask": "file:./demo/testtask",
     "@typexs/auth": "file:./packages/auth/src",
     "@typexs/auth-ng": "file:./packages/auth-ng/src",
     "@typexs/base": "file:./packages/base/src",
     "@typexs/base-ng": "file:./packages/base-ng/src",
     "@typexs/distributed-storage-ng": "file:./packages/distributed-storage-ng/src",
+    "@typexs/entity": "file:./packages/entity/src",
     "@typexs/entity-ng": "file:./packages/entity-ng/src",
     "@typexs/ng": "file:./packages/ng/src",
     "@typexs/ng-admin-ui": "file:./packages/ng-admin-ui/src",
@@ -51,23 +51,21 @@
     "@typexs/pipelines": "file:./packages/pipelines/src",
     "@typexs/roles": "file:./packages/roles/src",
     "@typexs/roles-api": "file:./packages/roles-api/src",
-    "@typexs/schema": "file:./packages/schema/src",
     "@typexs/search": "file:./packages/search/src",
     "@typexs/search-ng": "file:./packages/search-ng/src",
     "@typexs/server": "file:./packages/server/src",
     "@typexs/storage-ng": "file:./packages/storage-ng/src",
     "@typexs/tasks-ng": "file:./packages/tasks-ng/src",
-    "@typexs/testing": "file:./packages/testing/src"
+    "@typexs/testing": "file:./packages/testing/src",
+    "testtask": "file:./demo/testtask"
   },
   "devDependencies": {
-    "ajv": "^8.2.0",
-    "@allgemein/http": "^1.2.0",
-    "@allgemein/packaging": "^1.2.14",
-    "@allgemein/schema-api": "^1.5.2",
+    "@allgemein/http": "1.2.0",
+    "@allgemein/packaging": "1.2.14",
     "@angular-devkit/build-angular": "12.0.3",
     "@angular-devkit/core": "12.0.3",
     "@angular-devkit/schematics": "12.0.3",
-    "@angular-eslint/eslint-plugin": "^12.1.0",
+    "@angular-eslint/eslint-plugin": "12.1.0",
     "@angular/animations": "12.0.3",
     "@angular/cli": "12.0.3",
     "@angular/common": "12.0.3",
@@ -79,119 +77,121 @@
     "@angular/platform-browser": "12.0.3",
     "@angular/platform-browser-dynamic": "12.0.3",
     "@angular/router": "12.0.3",
-    "@antora/site-generator-default": "^2.3.4",
+    "@antora/site-generator-default": "2.3.4",
     "@cezaryrk/minimatch": "3.0.4",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@popperjs/core": "^2.9.2",
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@popperjs/core": "2.9.2",
     "@schematics/angular": "12.0.3",
-    "@testdeck/mocha": "^0.1.2",
-    "@types/brace-expansion": "^1.1.0",
-    "@types/chai": "^4.2.18",
-    "@types/chai-as-promised": "^7.1.4",
-    "@types/chai-spies": "^1.0.3",
-    "@types/d3": "^6.7.0",
-    "@types/event-stream": "^3.3.34",
-    "@types/events": "^3.0.0",
-    "@types/express": "^4.17.12",
-    "@types/fs-extra": "^9.0.11",
-    "@types/glob": "^7.1.3",
-    "@types/got": "^9.6.11",
-    "@types/gulp": "^4.0.8",
-    "@types/gulp-bump": "^2.8.1",
+    "@testdeck/mocha": "0.1.2",
+    "@types/bcrypt": "5.0.0",
+    "@types/brace-expansion": "1.1.0",
+    "@types/chai": "4.2.18",
+    "@types/chai-as-promised": "7.1.4",
+    "@types/chai-spies": "1.0.3",
+    "@types/d3": "6.7.0",
+    "@types/event-stream": "3.3.34",
+    "@types/events": "3.0.0",
+    "@types/express": "4.17.12",
+    "@types/fs-extra": "9.0.11",
+    "@types/glob": "7.1.3",
+    "@types/got": "9.6.11",
+    "@types/gulp": "4.0.8",
+    "@types/gulp-bump": "2.8.1",
     "@types/gulp-replace": "0.0.31",
     "@types/gulp-sourcemaps": "0.0.34",
-    "@types/gulp-watch": "^4.1.34",
-    "@types/jasmine": "^3.7.6",
-    "@types/jquery": "^3.5.5",
-    "@types/lodash": "^4.14.170",
-    "@types/luxon": "^1.26.5",
-    "@types/merge-stream": "^1.1.2",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.12.2",
-    "@types/redis": "^2.8.29",
-    "@types/sha1": "^1.1.3",
-    "@types/supertest": "^2.0.11",
-    "@types/through2": "^2.0.36",
-    "@types/triple-beam": "^1.3.2",
-    "@types/yargs": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "ag-grid-angular": "^25.3.0",
-    "ag-grid-community": "^25.3.0",
-    "animate.css": "^4.1.1",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^5.0.1",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "chai-spies": "^1.0.0",
-    "class-transformer": "^0.3.1",
+    "@types/gulp-watch": "4.1.34",
+    "@types/jasmine": "3.7.6",
+    "@types/jquery": "3.5.5",
+    "@types/ldapjs": "2.2.2",
+    "@types/lodash": "4.14.170",
+    "@types/luxon": "1.26.5",
+    "@types/merge-stream": "1.1.2",
+    "@types/mocha": "8.2.2",
+    "@types/node": "15.12.2",
+    "@types/redis": "2.8.29",
+    "@types/sha1": "1.1.3",
+    "@types/supertest": "2.0.11",
+    "@types/through2": "2.0.36",
+    "@types/triple-beam": "1.3.2",
+    "@types/yargs": "17.0.0",
+    "@typescript-eslint/eslint-plugin": "4.26.1",
+    "@typescript-eslint/parser": "4.26.1",
+    "ag-grid-angular": "25.3.0",
+    "ag-grid-community": "25.3.0",
+    "ajv": "8.2.0",
+    "animate.css": "4.1.1",
+    "body-parser": "1.19.0",
+    "bootstrap": "5.0.1",
+    "chai": "4.3.4",
+    "chai-as-promised": "7.1.1",
+    "chai-spies": "1.0.0",
+    "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
-    "codecov": "^3.8.2",
-    "codelyzer": "^6.0.2",
-    "core-js": "^3.13.1",
-    "cron-parser": "^3.5.0",
-    "d3": "^6.7.0",
-    "del": "^6.0.0",
-    "eslint": "^7.28.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jasmine": "^4.1.2",
-    "eslint-plugin-mocha": "^9.0.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "express": "^4.17.1",
-    "fs-extra": "^8.1.0",
-    "glob": "^7.1.7",
-    "got": "^11.8.2",
-    "gulp": "^4.0.2",
-    "gulp-bump": "^3.2.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-connect": "^5.7.0",
-    "gulp-mocha": "^8.0.0",
-    "gulp-replace": "^1.1.3",
-    "gulp-shell": "^0.8.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-typescript": "^5.0.1",
-    "i": "^0.3.7",
-    "jasmine": "^3.7.0",
-    "jquery": "^3.6.0",
-    "js-yaml": "^4.1.0",
-    "karma": "^6.3.3",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-cli": "^2.0.0",
-    "karma-coverage": "^2.0.3",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.6.0",
-    "ldapjs": "^2.3.1",
-    "light-server": "^2.9.1",
-    "lodash": "^4.17.21",
-    "merge-stream": "^2.0.0",
-    "mocha": "^8.4.0",
-    "mongodb": "^3.6.9",
-    "mysql": "^2.18.1",
+    "codecov": "3.8.2",
+    "codelyzer": "6.0.2",
+    "core-js": "3.13.1",
+    "cron-parser": "3.5.0",
+    "d3": "6.7.0",
+    "del": "6.0.0",
+    "eslint": "7.28.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jasmine": "4.1.2",
+    "eslint-plugin-mocha": "9.0.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "express": "4.17.1",
+    "fs-extra": "8.1.0",
+    "glob": "7.1.7",
+    "got": "11.8.2",
+    "gulp": "4.0.2",
+    "gulp-bump": "3.2.0",
+    "gulp-clean": "0.4.0",
+    "gulp-connect": "5.7.0",
+    "gulp-mocha": "8.0.0",
+    "gulp-replace": "1.1.3",
+    "gulp-shell": "0.8.0",
+    "gulp-sourcemaps": "3.0.0",
+    "gulp-typescript": "5.0.1",
+    "jasmine": "3.7.0",
+    "jquery": "3.6.0",
+    "js-yaml": "4.1.0",
+    "karma": "6.3.3",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-cli": "2.0.0",
+    "karma-coverage": "2.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.6.0",
+    "ldapjs": "2.3.1",
+    "light-server": "2.9.1",
+    "lodash": "4.17.21",
+    "merge-stream": "2.0.0",
+    "mocha": "8.4.0",
+    "mongodb": "3.6.9",
+    "mysql": "2.18.1",
     "ng-packagr": "12.0.3",
-    "node-machine-id": "~1.1.12",
-    "npm": "^8.1.3",
-    "nyc": "^15.1.0",
-    "perfect-scrollbar": "^1.5.1",
-    "pg": "^8.6.0",
-    "prismjs": "^1.23.0",
-    "redis": "^3.1.2",
+    "npm": "8.1.3",
+    "nyc": "15.1.0",
+    "perfect-scrollbar": "1.5.1",
+    "pg": "8.6.0",
+    "prismjs": "1.23.0",
+    "redis": "3.1.2",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.6.7",
-    "sinon": "^11.1.1",
-    "sinon-chai": "^3.7.0",
-    "source-map": "^0.7.3",
-    "sqlite3": "^5.0.2",
-    "std-mocks": "^1.0.1",
-    "supertest": "^6.1.3",
-    "through": "^2.3.8",
-    "ts-node": "^10.0.0",
-    "tslib": "^2.3.0",
+    "sha1": "^1.1.1",
+    "sinon": "11.1.1",
+    "sinon-chai": "3.7.0",
+    "source-map": "0.7.3",
+    "sqlite3": "5.0.2",
+    "std-mocks": "1.0.1",
+    "supertest": "6.1.6",
+    "through": "2.3.8",
+    "ts-node": "10.0.0",
+    "tslib": "2.3.0",
     "typeorm": "0.2.34",
     "typescript": "4.2.4",
-    "winston": "^3.3.3",
-    "yargonaut": "~1.1.4",
-    "yargs": "^17.0.1",
-    "zone.js": "~0.11.4"
+    "winston": "3.3.3",
+    "yargonaut": "1.1.4",
+    "yargs": "17.0.1",
+    "zone.js": "0.11.4"
   },
   "private": true,
   "typexs": {
