--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -2,8 +2,8 @@
   "name": "@typexs/base",
   "version": "0.0.0-PLACEHOLDER",
   "description": "",
-  "main": "index.js",
-  "browser": "browser.js",
+  "main": "index",
+  "browser": "browser",
   "scripts": {
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json"
@@ -23,26 +23,26 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@allgemein/base": "^1.6.2",
-    "@allgemein/config": "^1.1.3",
-    "@allgemein/eventbus": "^0.14.2",
-    "@allgemein/expressions": "^1.1.0",
-    "@allgemein/mango-expressions": "^1.1.1",
-    "@allgemein/moduls": "^1.6.5",
-    "@allgemein/schema-api": "^1.5.2",
+    "@allgemein/base": "1.6.2",
+    "@allgemein/config": "1.1.3",
+    "@allgemein/eventbus": "0.14.2",
+    "@allgemein/expressions": "1.1.0",
+    "@allgemein/mango-expressions": "1.1.1",
+    "@allgemein/moduls": "1.6.5",
+    "@allgemein/schema-api": "1.5.4",
     "@cezaryrk/minimatch": "3.0.4",
-    "ajv": "^8.2.0",
+    "ajv": "8.2.0",
     "fast-safe-stringify": "2.1.1",
-    "js-yaml": "~4.1.0",
-    "luxon": "^2.0.2",
-    "node-machine-id": "~1.1.12",
+    "js-yaml": "4.1.0",
+    "luxon": "2.0.2",
+    "node-machine-id": "1.1.12",
     "typedi": "0.8.0"
   },
   "peerDependencies": {
     "typeorm": "0.2.34",
-    "winston": "~3.3.3",
-    "yargonaut": "~1.1.4",
-    "yargs": "~17.2.1"
+    "winston": "3.3.3",
+    "yargonaut": "1.1.4",
+    "yargs": "17.2.1"
   },
   "private": true,
   "typexs": {
