--- a/packages/ng/package.json
+++ b/packages/ng/package.json
@@ -33,6 +33,6 @@
   },
   "peerDependencies": {
     "@typexs/base": "0.0.0-PLACEHOLDER",
-    "@typexs/schema": "0.0.0-PLACEHOLDER"
+    "@typexs/entity": "0.0.0-PLACEHOLDER"
   }
 }
