--- a/packages/roles-api/package.json
+++ b/packages/roles-api/package.json
@@ -10,7 +10,7 @@
   "author": "Robert Kania",
   "license": "MIT",
   "peerDependencies": {
-    "@cezaryrk/minimatch": "^3.0.4"
+    "@cezaryrk/minimatch": "3.0.4"
   },
   "private": true,
   "typexs": {
