--- a/packages/roles/package.json
+++ b/packages/roles/package.json
@@ -21,7 +21,7 @@
   },
   "peerDependencies": {
     "@typexs/base": "0.0.0-PLACEHOLDER",
-    "@typexs/schema": "0.0.0-PLACEHOLDER"
+    "@typexs/entity": "0.0.0-PLACEHOLDER"
   },
   "private": true,
   "typexs": {
