--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,8 +2,8 @@
   "name": "@typexs/server",
   "version": "0.0.0-PLACEHOLDER",
   "description": "Servers for typexs",
-  "main": "./index.ts",
-  "browser": "./browser.ts",
+  "main": "index",
+  "browser": "browser",
   "directories": {
     "doc": "docs/de"
   },
