--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@allgemein/http": "1.2.0",
+    "@allgemein/moduls": "1.6.5",
     "@allgemein/packaging": "1.2.14",
     "@angular-devkit/build-angular": "12.0.3",
     "@angular-devkit/core": "12.0.3",
