fix: work on ng template + entity routing fixing

--- a/config/app-auth/typexs--server.yml
+++ b/config/app-auth/typexs--server.yml
@@ -35,21 +35,22 @@ initialise:
 
 auth:
   allowSignup: true
-
   methods:
     default:
       type: database
       approval:
         auto: true
-    onedrive:
-      type: oauth2
-      label: OneDrive - Login
-      serverside: true
-      configuration: microsoft
-      clientID: ${onedrive.demoapp.id}
-      clientSecret: ${onedrive.demoapp.secret}
-      callbackURL: http://localhost:4500/api/auth/onedrive/callback
-      scope:
-        - User.Read
-      # - onedrive.read
+
+
+#    onedrive:
+#      type: oauth2
+#      label: OneDrive - Login
+#      serverside: true
+#      configuration: microsoft
+#      clientID: ${onedrive.demoapp.id}
+#      clientSecret: ${onedrive.demoapp.secret}
+#      callbackURL: http://localhost:4500/api/auth/onedrive/callback
+#      scope:
+#        - User.Read
+#      # - onedrive.read
 
