--- a/packages/app-auth/angular.json
+++ b/packages/app-auth/angular.json
@@ -11,7 +11,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../../build/app/dist",
+            "outputPath": "../../build/app-auth/dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
@@ -61,11 +61,11 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "app:build:production",
+              "browserTarget": "app-auth:build:production",
               "proxyConfig": "proxy.conf.json"
             },
             "development": {
-              "browserTarget": "app:build:development",
+              "browserTarget": "app-auth:build:development",
               "proxyConfig": "proxy.conf.json"
             }
           },
@@ -74,7 +74,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "app:build"
+            "browserTarget": "app-auth:build"
           }
         },
         "test": {
