--- a/packages/ng-theme-base/package.json
+++ b/packages/ng-theme-base/package.json
@@ -27,15 +27,9 @@
   "peerDependencies": {
     "@typexs/base-ng": "0.0.0-PLACEHOLDER",
     "@typexs/ng-forms": "0.0.0-PLACEHOLDER",
-    "@typexs/ng-router-menu": "0.0.0-PLACEHOLDER"
-  },
-  "devDependencies": {
-    "perfect-scrollbar": "1.5.1",
-    "lodash": "4.17.21",
-    "@typexs/ng": "0.0.0-PLACEHOLDER",
-    "@angular/core": "12.0.3",
-    "@angular/common": "12.0.3",
-    "@angular/router": "12.0.3",
-    "rxjs": "6.6.7"
+    "@typexs/ng-router-menu": "0.0.0-PLACEHOLDER",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.0.1",
+    "perfect-scrollbar": "^1.5.1"
   }
 }
