fix: change name

--- a/packages/entity/.nycrc.json
+++ b/packages/entity/.nycrc.json
@@ -15,8 +15,8 @@
   "reporter": [
     "json"
   ],
-  "temp-dir": "/tmp/typexs/.nyc-output/schema",
-  "report-dir": "../../coverage/schema",
+  "temp-dir": "/tmp/typexs/.nyc-output/entity",
+  "report-dir": "../../coverage/entity",
   "sourceMap": true,
   "instrument": true,
   "cache": false
