--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -23,7 +23,7 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@allgemein/base": "1.6.2",
+    "@allgemein/base": "1.6.6",
     "@allgemein/config": "1.1.3",
     "@allgemein/eventbus": "0.14.2",
     "@allgemein/expressions": "1.1.0",
@@ -34,6 +34,7 @@
     "ajv": "8.2.0",
     "fast-safe-stringify": "2.1.1",
     "js-yaml": "4.1.0",
+    "lodash": "^4.17.21",
     "luxon": "2.0.2",
     "node-machine-id": "1.1.12",
     "typedi": "0.8.0"
