--- a/config/app/typexs.yml
+++ b/config/app/typexs.yml
@@ -19,6 +19,7 @@ storage:
       - entities:
           - TypeOrmSimpleItem
           - BuildSimpleItem
+          - BuildDemoEntity
 
 
 filesystem:
