--- a/packages/entity-ng/package.json
+++ b/packages/entity-ng/package.json
@@ -32,10 +32,10 @@
   },
   "devDependencies": {
     "chai": "4.3.4",
-    "@angular/core": "12.0.3",
-    "@angular/forms": "12.0.3",
-    "@angular/common": "12.0.3",
-    "@angular/router": "12.0.3",
+    "@angular/core": "v12-lts",
+    "@angular/forms": "v12-lts",
+    "@angular/common": "v12-lts",
+    "@angular/router": "v12-lts",
     "rxjs": "6.6.7"
   }
 }
