--- a/packages/ng-admin-ui/package.json
+++ b/packages/ng-admin-ui/package.json
@@ -36,9 +36,9 @@
     "@typexs/server": "0.0.0-PLACEHOLDER"
   },
   "devDependencies": {
-    "@angular/core": "12.0.3",
-    "@angular/common": "12.0.3",
-    "@angular/router": "12.0.3",
+    "@angular/core": "v12-lts",
+    "@angular/common": "v12-lts",
+    "@angular/router": "v12-lts",
     "rxjs": "6.6.7"
   }
 }
