--- a/packages/search-ng/package.json
+++ b/packages/search-ng/package.json
@@ -23,10 +23,10 @@
     "@typexs/ng-forms": "0.0.0-PLACEHOLDER"
   },
   "devDependencies": {
-    "@angular/common": "12.0.3",
-    "@angular/router": "12.0.3",
-    "@angular/core": "12.0.3",
-    "@angular/forms": "12.0.3",
+    "@angular/common": "v12-lts",
+    "@angular/router": "v12-lts",
+    "@angular/core": "v12-lts",
+    "@angular/forms": "v12-lts",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
   }
