--- a/package.json
+++ b/package.json
@@ -64,26 +64,26 @@
     "@allgemein/http": "1.2.0",
     "@allgemein/moduls": "1.6.5",
     "@allgemein/packaging": "1.2.15",
-    "@angular-devkit/build-angular": "12.0.3",
-    "@angular-devkit/core": "12.0.3",
-    "@angular-devkit/schematics": "12.0.3",
+    "@angular-devkit/build-angular": "v12-lts",
+    "@angular-devkit/core": "v12-lts",
+    "@angular-devkit/schematics": "v12-lts",
     "@angular-eslint/eslint-plugin": "12.1.0",
-    "@angular/animations": "12.0.3",
-    "@angular/cli": "12.0.3",
-    "@angular/common": "12.0.3",
-    "@angular/compiler": "12.0.3",
-    "@angular/compiler-cli": "12.0.3",
-    "@angular/core": "12.0.3",
-    "@angular/forms": "12.0.3",
-    "@angular/language-service": "12.0.3",
-    "@angular/platform-browser": "12.0.3",
-    "@angular/platform-browser-dynamic": "12.0.3",
-    "@angular/router": "12.0.3",
+    "@angular/animations": "v12-lts",
+    "@angular/cli": "v12-lts",
+    "@angular/common": "v12-lts",
+    "@angular/compiler": "v12-lts",
+    "@angular/compiler-cli": "v12-lts",
+    "@angular/core": "v12-lts",
+    "@angular/forms": "v12-lts",
+    "@angular/language-service": "v12-lts",
+    "@angular/platform-browser": "v12-lts",
+    "@angular/platform-browser-dynamic": "v12-lts",
+    "@angular/router": "v12-lts",
     "@antora/site-generator-default": "2.3.4",
     "@cezaryrk/minimatch": "3.0.4",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.2",
-    "@schematics/angular": "12.0.3",
+    "@schematics/angular": "v12-lts",
     "@testdeck/mocha": "0.1.2",
     "@types/bcrypt": "5.0.0",
     "@types/brace-expansion": "1.1.0",
