--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "es2020",
     "paths": {
       "@typexs/base": [
         "./packages/base/src/browser"
