build: update eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,8 +12,7 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json",
-    "sourceType": "module"
+    "project": ["./tsconfig.json"]
   },
   "plugins": [
     "eslint-plugin-import",
