--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,36 +12,15 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": ["./tsconfig.json"]
+    "project": ["tsconfig.json", "tsconfig.lib.json"]
   },
   "plugins": [
-    "eslint-plugin-import",
-    "@angular-eslint/eslint-plugin",
-    "@typescript-eslint",
     "jasmine",
-    "mocha"
+    "mocha",
+    "eslint-plugin-import",
+    "@typescript-eslint"
   ],
   "rules": {
-    "@angular-eslint/component-class-suffix": "error",
-    "@angular-eslint/component-selector": [
-      "error",
-      {
-        "type": "element",
-        "style": "kebab-case"
-      }
-    ],
-    "@angular-eslint/directive-class-suffix": "error",
-    "@angular-eslint/directive-selector": [
-      "error",
-      {
-        "type": "attribute",
-        "style": "camelCase"
-      }
-    ],
-    "@angular-eslint/no-input-rename": "error",
-    "@angular-eslint/no-output-on-prefix": "error",
-    "@angular-eslint/no-output-rename": "error",
-    "@angular-eslint/use-pipe-transform-interface": "error",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/ban-types": [
