--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -66,7 +66,7 @@
     "report-dir": "./coverage/backend"
   },
   "typexs": {
-    "name": "typexs-auth",
+    "name": "auth",
     "declareLibs": [
       {
         "topic": "auth.adapters",
