build: update eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,10 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": ["tsconfig.json", "tsconfig.lib.json"]
+    "project": [
+      "tsconfig.json",
+      "tsconfig.lib.json"
+    ]
   },
   "plugins": [
     "jasmine",
@@ -101,14 +104,18 @@
     "id-blacklist": "off",
     "id-match": "off",
     "import/no-deprecated": "warn",
-    "indent": [
-      "error",
-      2,
-      {"SwitchCase":  1}
-    ],
+    "indent": "off",
     "@typescript-eslint/indent": [
       "error",
-      2
+      2,
+      {
+        "SwitchCase": 1,
+        "ignoredNodes": [
+          "FunctionExpression > .params[decorators.length > 0]",
+          "FunctionExpression > .params > :matches(Decorator, :not(:first-child))",
+          "ClassBody.body > PropertyDefinition[decorators.length > 0] > .key"
+        ]
+      }
     ],
     "max-len": [
       "error",
