--- a/packages/entity/package.json
+++ b/packages/entity/package.json
@@ -32,6 +32,7 @@
   },
   "peerDependencies": {
     "@typexs/base": "0.0.0-PLACEHOLDER",
+    "@typexs/pipelines": "0.0.0-PLACEHOLDER",
     "@typexs/server": "0.0.0-PLACEHOLDER"
   },
   "private": true,
