--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "ng-packagr": "12.2.7",
     "nyc": "15.1.0",
     "perfect-scrollbar": "1.5.1",
+    "routing-controllers": "0.9.0",
     "pg": "8.6.0",
     "prismjs": "1.23.0",
     "redis": "3.1.2",
