--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -25,12 +25,12 @@
   "dependencies": {
     "@allgemein/base": "~1.6.8",
     "@allgemein/config": "~1.1.3",
-    "@allgemein/eventbus": "0.14.2",
-    "@allgemein/expressions": "1.1.0",
-    "@allgemein/mango-expressions": "1.1.1",
-    "@allgemein/moduls": "1.6.5",
-    "@allgemein/schema-api": "1.5.10",
-    "@cezaryrk/minimatch": "3.0.4",
+    "@allgemein/eventbus": "~0.14.2",
+    "@allgemein/expressions": "~1.1.0",
+    "@allgemein/mango-expressions": "~1.1.1",
+    "@allgemein/moduls": "~1.6.5",
+    "@allgemein/schema-api": "~1.5.11",
+    "@cezaryrk/minimatch": "~3.0.4",
     "ajv": "8.2.0",
     "fast-safe-stringify": "2.1.1",
     "js-yaml": "4.1.0",
