--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,8 +2,8 @@
   "name": "@typexs/server",
   "version": "0.0.0-PLACEHOLDER",
   "description": "Servers for typexs",
-  "main": "index",
-  "browser": "browser",
+  "main": "./index",
+  "browser": "./browser",
   "directories": {
     "doc": "docs/de"
   },
@@ -29,13 +29,13 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "0.0.0-PLACEHOLDER",
+    "@typexs/roles-api": "0.0.0-PLACEHOLDER"
+  },
+  "peerDependencies": {
+    "@typexs/base": "0.0.0-PLACEHOLDER",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
     "routing-controllers": "0.9.0"
-  },
-  "peerDependencies": {
-    "@typexs/base": "0.0.0-PLACEHOLDER"
   },
   "private": true,
   "typexs": {
