--- a/config/typexs.yml
+++ b/config/typexs.yml
@@ -14,6 +14,9 @@ logging:
 
 
 modules:
+  disableCache: true
+  paths:
+    - './demo'
   include:
     - '**/@allgemein{,**/*}'
     - '**/@typexs{,**/*}'
