fix work on ng entity and storage listings

--- a/packages/storage-ng/package.json
+++ b/packages/storage-ng/package.json
@@ -29,6 +29,7 @@
     "@typexs/ng": "0.0.0-PLACEHOLDER",
     "@typexs/server": "0.0.0-PLACEHOLDER",
     "@typexs/base-ng": "0.0.0-PLACEHOLDER",
+    "@typexs/forms": "0.0.0-PLACEHOLDER",
     "@typexs/forms-ng": "0.0.0-PLACEHOLDER"
   },
   "devDependencies": {
