--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@typexs/typexs",
-  "version": "2.0.11",
+  "version": "2.0.10",
   "tag": "v2-lts",
   "description": "Angular for typexs",
   "main": "index.js",
   "browser": "browser.js",
   "directories": {
-    "doc": "docs/de"
+    "doc": "packages/testing/docs/de"
   },
   "scripts": {
     "test": "npx gulp test",
