--- a/packages/app-auth/tsconfig.app.json
+++ b/packages/app-auth/tsconfig.app.json
@@ -54,6 +54,12 @@
       "@typexs/roles/*": [
         "./packages/roles/src/*"
       ],
+      "@typexs/roles-api": [
+        "./packages/roles-api/src",
+      ],
+      "@typexs/roles-api/*": [
+        "./packages/roles-api/src/*",
+      ],
       "@typexs/base-ng/*": [
         "./packages/base-ng/src/*"
       ],
