--- a/packages/auth-ng/tsconfig.lib.prod.json
+++ b/packages/auth-ng/tsconfig.lib.prod.json
@@ -2,7 +2,8 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
-    "declarationMap": false
+    "declarationMap": false,
+    "preserveSymlinks": true
   },
   "angularCompilerOptions": {
     "compilationMode": "partial"
