--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mocha": "npx mocha test/{**,**/**}/*.spec.ts",
     "karma": "npx ng test typexs --code-coverage=true --watch=false",
     "cleanup": "npx gulp cleanup && npm i",
-    "publish": "npx gulp packages && npx gulp packages_publish && npx gulp dist-tag"
+    "publish": "npx gulp packages && npx gulp packages_publish && npx gulp dist-tag",
+    "documentation": "npx gulp docs-generate",
+    "documentation:watch": "npx gulp watch-doc"
   },
   "repository": {
     "type": "git",
@@ -46,10 +48,10 @@
     "@typexs/distributed-storage-ng": "file:./packages/distributed-storage-ng/src",
     "@typexs/entity": "file:./packages/entity/src",
     "@typexs/entity-ng": "file:./packages/entity-ng/src",
-    "@typexs/ng": "file:./packages/ng/src",
-    "@typexs/ng-admin-ui": "file:./packages/ng-admin-ui/src",
     "@typexs/forms": "file:./packages/forms/src",
     "@typexs/forms-ng": "file:./packages/forms-ng/src",
+    "@typexs/ng": "file:./packages/ng/src",
+    "@typexs/ng-admin-ui": "file:./packages/ng-admin-ui/src",
     "@typexs/ng-router-menu": "file:./packages/ng-router-menu/src",
     "@typexs/ng-theme-base": "file:./packages/ng-theme-base/src",
     "@typexs/notification": "file:./packages/notification/src",
@@ -84,7 +86,8 @@
     "@angular/platform-browser": "v12-lts",
     "@angular/platform-browser-dynamic": "v12-lts",
     "@angular/router": "v12-lts",
-    "@antora/site-generator-default": "2.3.4",
+    "@antora/cli": "^3.1.1",
+    "@antora/site-generator-default": "^3.1.1",
     "@cezaryrk/minimatch": "3.0.4",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.11.4",
@@ -127,6 +130,7 @@
     "ag-grid-community": "25.3.0",
     "ajv": "8.2.0",
     "animate.css": "4.1.1",
+    "asciidoctor-plantuml": "^1.5.0",
     "body-parser": "1.19.0",
     "bootstrap": "5.1.3",
     "chai": "4.3.4",
@@ -177,10 +181,10 @@
     "ng-packagr": "12.2.7",
     "nyc": "15.1.0",
     "perfect-scrollbar": "1.5.1",
-    "routing-controllers": "0.9.0",
     "pg": "8.6.0",
     "prismjs": "1.23.0",
     "redis": "3.1.2",
+    "routing-controllers": "0.9.0",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.6.7",
     "sha1": "^1.1.1",
