--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,8 @@ test:
   image: ubuntu:latest
   stage: test
   script:
-    - sudo sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
-    - sudo apt install curl
+    - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
+    - apt install curl
     - curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
     - source ~/.profile
     - nvm install 16 && nvm use 16 && nvm alias default 16
